@@ -1,4 +1,0 @@
-RABBITMQ_NODE_TYPE=queue-disc
-RABBITMQ_NODE_NAME=rabbit@queue-disc
-RABBITMQ_CLUSTER_NODE_NAME=rabbit@stats
-RABBITMQ_ERL_COOKIE=s3cr3tc00ki3
