@@ -1,3 +1,0 @@
-RABBITMQ_NODE_TYPE=stats
-RABBITMQ_NODE_NAME=rabbit@stats
-RABBITMQ_ERL_COOKIE=s3cr3tc00ki3
