@@ -1,3 +1,4 @@
+28/06/2020 07:32  8  Completed Redis Client
 27/06/2020 18:18  7  Successful Built
 27/06/2020 07:39  6  Bug Fixes
 25/06/2020 17:29  5  Somehow Ready for Use
